Front page UI changes

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,12 +1,91 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <script src="https://unpkg.com/react@15/dist/react.min.js"></script>
     <script src="https://unpkg.com/react-dom@15/dist/react-dom.min.js"></script>
     <script src="https://unpkg.com/react-router/umd/ReactRouter.min.js"></script>
     <script src="https://use.fontawesome.com/75c2bbc0c8.js"></script>
+    <script type="text/javascript" id="globalnav-script"
+	src="https://id.openmrs.org/globalnav/js/app-optimized.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<!-- Latest compiled and minified JavaScript -->
+ <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+ 
+ 
+ 
+<style>
+@import url(//fonts.googleapis.com/css?family=Open+Sans:400italic,400,300,700);
+.logo1{
+float:left;
+
+margin-top:2%;
+height :39px;
+width: 284px;
+}
+.logotext{
+    margin-top: 30px;
+}
+.ma{
+margin-left:20px;
+font-size:35px;}
+.f{
+margin:10px 0px 10px 30px;}
+.buttonfix{
+    top: 30px;float:right;
+   
+}
+.pushdown{
+
+    margin-top: 40px;
+
+}
+.textdec{
+
+	align:center;
+    padding-top: 30px;
+
+
+}
+body {
+  color: #363463;
+  font-family: "Open Sans";
+}
+a,
+a:link {
+  color: #275c8a;
+}
+header h1 sup {
+  -webkit-font-smoothing: antialiased;
+}
+
+.p{
+margin-left:2%;
+margin-top:3%;
+
+}
+tr {
+   line-height: 25px;
+   min-height: 25px;
+   height: 25px;
+   
+}
+
+.descmod{
+
+ padding-top: 2%;
+}
+footer {
+    font-size: 0.8em;
+    color: #555555;
+    text-align: center;
+    margin-top: 3em;
+}
+</style>
 </head>
 <body>
-<div id="root"></div>
+<div id="root">
 <script src="static/app/bundle.js"></script>
+</div>
 </body>
 </html>
